Strengthen hero copy and roadmap

--- a/index.html
+++ b/index.html
@@ -148,10 +148,11 @@
   <main class="container">
     <section class="hero">
       <div class="hero-text">
-        <h1>Save Any AI Answer. Find It Instantly—Forever.</h1>
-        <p>Clip any reply once. Retrieve it in under a second—even weeks later.</p>
+        <h1>Your Personal AI Memory Vault—One Tap In, Instant Genius Out.</h1>
+        <p>Bank critical code, prompts and ideas today; withdraw them whenever inspiration strikes. Build a true second brain that never forgets.</p>
         <a href="#" class="btn-primary">Add to Chrome — Free Forever</a>
         <small>Zero forms. 10-second install.</small>
+        <p style="margin-top:0.5rem;font-size:0.95rem;">Boost productivity 10× now—roadmap upgrades push you to 100×.</p>
       </div>
       <div class="hero-img">
         <img id="hero-screenshot" src="screenshots/screenshot1.png" alt="Memory Mate extension screenshot">
@@ -184,12 +185,12 @@
         <li><h3>Works Everywhere</h3><p>ChatGPT, Gemini, Claude & more.</p></li>
       </ul>
       <div style="margin-top:3rem;text-align:center;">
-        <h3 style="font-weight:600;margin-bottom:1rem;">Coming Soon — Help Shape the Roadmap</h3>
+        <h3 style="font-weight:600;margin-bottom:1rem;">Roadmap to 100× Productivity</h3>
         <div class="feature-grid" style="margin-top:1rem;">
-          <div class="card-feature"><h4>Export to Notion & more</h4><p>Sync projects to Notion, Obsidian, or OneNote in one click.</p></div>
-          <div class="card-feature"><h4>Answer & Project Tags</h4><p>Add quick tags for laser-fast search.</p></div>
-          <div class="card-feature"><h4>Inject into Prompt</h4><p>Insert saved snippets without copy-paste.</p></div>
-          <div class="card-feature"><h4>Built-in RAG Assistant</h4><p>Prompts auto-filled with your own notes.</p></div>
+          <div class="card-feature"><h4>One‑Click Notion & Obsidian Sync</h4><p>Keep your projects mirrored in your favorite apps.</p></div>
+          <div class="card-feature"><h4>Smart Tags Everywhere</h4><p>Laser-fast search and cross-cut views.</p></div>
+          <div class="card-feature"><h4>Instant Prompt Injection</h4><p>Drop any snippet into chat with zero copy‑paste.</p></div>
+          <div class="card-feature"><h4>Auto-Surfaced Snippets</h4><p>RAG-powered assistant feeds answers from your vault.</p></div>
         </div>
         <p style="margin-top:1rem;font-size:0.95rem;">Vote on next features—first 5 000 users shape what ships.</p>
         <p style="margin-top:1.5rem;"><a href="#" class="btn-primary">Unlock Pro Features</a></p>
